--- a/src/styles/current-projectsstyle.css
+++ b/src/styles/current-projectsstyle.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
-    background: url(../images/Screenshot\ 2024-07-11\ at\ 1.47.15\ PM.png) no-repeat center center fixed;
+    background-color: #E49D5B;
     background-size: cover;
 }
 
@@ -13,8 +13,8 @@ header {
     text-align: right;
     font-size: 1em;
     padding-right: 10px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 nav {
@@ -36,13 +36,23 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #e62525;
+    background-color: #E49D5B;
     color: black;
 }
 
+
 .container {
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.8); /* Add a light background with some transparency */
+    padding: 20px;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gallery img {
+    margin: 5px;
+    width: calc(33% - 10px);
 }
 
 .footer {
@@ -50,7 +60,6 @@ nav a:hover {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    position: absolute;
     bottom: 0;
     width: 100%;
     font-size: .7em;
