--- a/src/styles/sandyfacesstyle.css
+++ b/src/styles/sandyfacesstyle.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url(../images/Screenshot\ 2024-07-11\ at\ 1.47.15\ PM.png) no-repeat center center fixed;
+    background-color: #f4f4f4;
     color: #333;
 }
 
@@ -51,7 +51,7 @@ nav a:hover {
     padding: 20px;
     background-color: #333;
     color: white;
-    position: absolute;
     bottom: 0;
     width: 100%;
+    flex-direction: row;
 }
